[gd_scene load_steps=6 format=2]

[ext_resource path="res://actor/enemy/satelite.gd" type="Script" id=1]
[ext_resource path="res://assets/ship/satelite96.png" type="Texture" id=2]
[ext_resource path="res://actor/effect/white_flash.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=2]
height = 80.0

[sub_resource type="CapsuleShape2D" id=3]
height = 40.0

[node name="satelite" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 452, 581 )
texture = ExtResource( 2 )
offset = Vector2( -452, -581 )

[node name="white_flash" parent="sprite" instance=ExtResource( 4 )]

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="shape2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="timer" type="Node2D" parent="."]

[node name="can_shot" type="Timer" parent="timer"]

[node name="visibility" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_satelite_area_entered"]
[connection signal="timeout" from="timer/can_shot" to="." method="_on_can_shot_timeout"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
